# AntonovCode

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: config.example.yaml  config.yaml
src/access_control/: __init__.py  app.py  config.py  sort_tracker.py  telegram.py  yolo_human.py
weights/: yolov8n-human-crowdhuman.pt
